
[CMAKE]
  -- added cmake build system support

[WOL]
  -- completed support for all WOL clients (read IGNOREME.TXT)
  -- disable account creation via irc/wol when new_accounts=false
  -- added support to allow/deny WOL clients in bnconf.conf
  -- added support for battle clans
  -- added various protocol related fixes
  -- added apiregister support
  -- added autoupdate support for WOLv2 games
  -- added variables into bnetd.conf for wol FTP server specification
  -- fixed non shoed voice flag for clients in channel
  -- fixed bug in RedAlert2/Yuri when game owner change maximum players

[MISC]
  -- added /clan whisper subcommand
  -- added /clan create/invite/disband subcommands
  -- added clan_min_invites to bnetd.conf for miminum accepted
     invitations need in clan-creating process (default is 2)

 ChangeLog for 1.8.3 (since 1.8.2)
=========================================

[WOL]
  -- added Dune 2000 Support
  -- fixed bad time format in startgame message
  -- fixed log warnings/errors rising in login process

[MISC]
  -- fixed malformed output by /cg list command

 ChangeLog for 1.8.2 (since 1.8.1)
=========================================

[WOL]
  -- fixed possible server crash on raw list command

[SC/BW]
  -- fixed client crash when was showed Friends without any item

[VCHECK]
  -- added SC/BW IX86 and XMAC 1.15.1 version check entries

 ChangeLog for 1.8.1 (since 1.8.0)
=========================================

[WOL]
  -- fixed bug trying to join unexistent games
  -- fixed bug overflowing the max players game limit
  -- fixed bug of not showing Yuri's revenge channels
  -- added address translation support to servserv sent addresses
  -- added support for usage of /commands

[WAR3]
  -- fixed possible server crash on ill-formated clan invitation reply packet
  -- properly display tourney wins/losses in account profile

[MISC]
  -- fixed d2dbs accepting d2gs connections from any ip
  -- fixed IRC /notice disc bug